--- a/20202webIndex.html
+++ b/20202webIndex.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webProgramming</title>
+    <link rel="stylesheet" href="20202webIndex.css">
 </head>
 <body>
     
 </body>
+<script src="./20202webIndex.js"></script>
 </html>
