디자인 구상중

--- a/20202webIndex.html
+++ b/20202webIndex.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="20202webIndex.css">
 </head>
 <body>
-    
+    <main>
+        <div id="Title-Box">
+            <h1 id="Title-Name">Welcome To GameZone</h1>
+        </div>
+        <table id="table">
+            <thead>
+                <th>Land Mine Search Game</th>
+                <th>Turning Card Game</th>
+                <th>Tetris Game</th>
+                <th>2048 Game</th>
+                <th>TikTakToe Game</th>
+            </thead>
+        </table>
+    </main>
 </body>
 <script src="./20202webIndex.js"></script>
 </html>
+
