--- a/20202webIndex.html
+++ b/20202webIndex.html
@@ -7,21 +7,27 @@
     <link rel="stylesheet" href="20202webIndex.css">
 </head>
 <body>
-    <main>
+    <header>
         <div id="Title-Box">
             <h1 id="Title-Name">Welcome To GameZone</h1>
         </div>
-        <table id="table">
-            <thead>
-                <th>Land Mine Search Game</th>
-                <th>Turning Card Game</th>
-                <th>Tetris Game</th>
-                <th>2048 Game</th>
-                <th>TikTakToe Game</th>
-            </thead>
-        </table>
+    </header>
+    <main>
+        <div id="drop">
+            <ul>
+              <li>
+                <p id="GameList">GameZone List</p>
+                <ul id="type_of_game">
+                  <li class="list_hover"><a href="#">Land Mine Search Game</a></li>
+                  <li class="list_hover"><a href="#">Turning Card Game</a></li>
+                  <li class="list_hover"><a href="#">2048 Game</a></li>
+                  <li class="list_hover"><a href="#">Tetris Game</a></li>
+                  <li class="list_hover"><a href="#">TikTakToe Game</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
     </main>
 </body>
 <script src="./20202webIndex.js"></script>
 </html>
-
