--- a/20202webIndex.html
+++ b/20202webIndex.html
@@ -18,11 +18,11 @@
               <li>
                 <p id="GameList">GameZone List</p>
                 <ul id="type_of_game">
-                  <li class="list_hover"><a href="#">Land Mine Search Game</a></li>
-                  <li class="list_hover"><a href="#">Turning Card Game</a></li>
-                  <li class="list_hover"><a href="#">2048 Game</a></li>
-                  <li class="list_hover"><a href="#">Tetris Game</a></li>
-                  <li class="list_hover"><a href="#">TikTakToe Game</a></li>
+                  <li class="list_hover"><a href="file:///C:/JSzerocho/7.2%EB%A7%88%EC%9D%B8/%EB%A7%88%EC%9D%B8.html">Land Mine Search Game</a></li>
+                  <li class="list_hover"><a href="file:///C:/JSzerocho/9.2%EC%B9%B4%EB%93%9C%EB%92%A4%EC%A7%91%EA%B8%B0/%EC%B9%B4%EB%93%9C%EB%92%A4%EC%A7%91%EA%B8%B0.html">Turning Card Game</a></li>
+                  <li class="list_hover"><a href="file:///C:/JSzerocho/11.(1)2048/2048.html">2048 Game</a></li>
+                  <li class="list_hover"><a href="file:///C:/JSzerocho/12.2%ED%85%8C%ED%8A%B8%EB%A6%AC%EC%8A%A4/%ED%85%8C%ED%8A%B8%EB%A6%AC%EC%8A%A4.html">Tetris Game</a></li>
+                  <li class="list_hover"><a href="file:///C:/JSzerocho/6.1tiktaktok/6.1tiktaktok.html">TikTakToe Game</a></li>
                 </ul>
               </li>
             </ul>
