코드가 더럽긴한데 돌아가게끔은 만듬

--- a/20202webIndex.html
+++ b/20202webIndex.html
@@ -14,19 +14,45 @@
     </header>
     <main>
         <div id="drop">
-            <ul>
-              <li>
-                <p id="GameList">GameZone List</p>
-                <ul id="type_of_game">
-                  <li class="list_hover"><a href="file:///C:/JSzerocho/7.2%EB%A7%88%EC%9D%B8/%EB%A7%88%EC%9D%B8.html">Land Mine Search Game</a></li>
-                  <li class="list_hover"><a href="file:///C:/JSzerocho/9.2%EC%B9%B4%EB%93%9C%EB%92%A4%EC%A7%91%EA%B8%B0/%EC%B9%B4%EB%93%9C%EB%92%A4%EC%A7%91%EA%B8%B0.html">Turning Card Game</a></li>
-                  <li class="list_hover"><a href="file:///C:/JSzerocho/11.(1)2048/2048.html">2048 Game</a></li>
-                  <li class="list_hover"><a href="file:///C:/JSzerocho/12.2%ED%85%8C%ED%8A%B8%EB%A6%AC%EC%8A%A4/%ED%85%8C%ED%8A%B8%EB%A6%AC%EC%8A%A4.html">Tetris Game</a></li>
-                  <li class="list_hover"><a href="file:///C:/JSzerocho/6.1tiktaktok/6.1tiktaktok.html">TikTakToe Game</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+          <ul>
+            <p id="GameList">GameZone List</p>
+          </ul>
+        </div>
+        <div id="Games-First">
+          <ul>
+            <li>
+              <a class="first" href="file:///C:/JSzerocho/7.2%EB%A7%88%EC%9D%B8/%EB%A7%88%EC%9D%B8.html" target="_blank">Land Mine Search Game</a>
+            </li>
+          </ul>
+        </div>
+        <div id="Games-Second">
+          <ul>
+            <li>
+              <a href="file:///C:/JSzerocho/9.2%EC%B9%B4%EB%93%9C%EB%92%A4%EC%A7%91%EA%B8%B0/%EC%B9%B4%EB%93%9C%EB%92%A4%EC%A7%91%EA%B8%B0.html" target="_blank">Turning Card Game</a>
+            </li>
+          </ul>
+        </div>
+        <div id="Games-Third">
+          <ul>
+            <li>
+              <a href="file:///C:/JSzerocho/11.(1)2048/2048.html" target="_blank">2048 Game</a>
+            </li>
+          </ul>
+        </div>
+        <div id="Games-Fourth">
+          <ul>
+            <li>
+              <a href="file:///C:/JSzerocho/12.2%ED%85%8C%ED%8A%B8%EB%A6%AC%EC%8A%A4/%ED%85%8C%ED%8A%B8%EB%A6%AC%EC%8A%A4.html" target="_blank">Tetris Game</a>
+            </li>
+          </ul>
+        </div>
+        <div id="Games-Fifth">
+          <ul>
+            <li>
+              <a href="file:///C:/JSzerocho/6.1tiktaktok/6.1tiktaktok.html" target="_blank">TikTakToe Game</a>
+            </li>
+          </ul>
+        </div>
     </main>
 </body>
 <script src="./20202webIndex.js"></script>
