--- a/20202webIndex.html
+++ b/20202webIndex.html
@@ -28,7 +28,7 @@
         <div id="Games-Second">
           <ul>
             <li>
-              <a href="file:///C:/JSzerocho/9.2%EC%B9%B4%EB%93%9C%EB%92%A4%EC%A7%91%EA%B8%B0/%EC%B9%B4%EB%93%9C%EB%92%A4%EC%A7%91%EA%B8%B0.html" target="_blank">Turning Card Game</a>
+              <a href="file:///C:/JSzerocho/9.1card/9.1card.html" target="_blank">Turning Card Game</a>
             </li>
           </ul>
         </div>
